<resources>
    <string name="app_name">PasswordLocker</string>
    <string name="label_change_theme">Switch Theme</string>
    <string name="label_password_pattern">**********</string>
    <string name="label_enter_details">Enter details to save</string>
    <string name="hint_enter_title">Enter title</string>
    <string name="hint_enter_pwd">Enter password</string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_enter_username">Enter username</string>
    <string name="label_title">Title</string>
    <string name="label_user_name">Username/Password</string>
    <string name="label_password">Password</string>
    <string name="hint_enter_new_pwd">Enter new password</string>
    <string name="hint_confirm_pwd">Confirm password</string>
    <string name="label_update">Update</string>
    <string name="label_enter_master_password">Enter master password which will be used to view your all saved password.</string>
    <string name="label_save">Save</string>
    <string name="label_password_length_note">Note: password length must be greater than 7.</string>
    <string name="font_biryani">biryani</string>
    <string name="error_master_pwd_match">Password not matched with original password</string>
    <string name="lable_no_record">No password saved till now. Press + icon at bottom right to start exploring.</string>
    <string name="label_no_search_record">No record found with matching search.</string>
    <string name="alert_undo">1 item deleted </string>
    <string name="alert_undo_action">Undo</string>

    <string name="error_weak_pwd">Week Password: length must be greater than 7</string>
    <string name="error_pwd_match">Password not matching</string>
    <string name="error_empty_title">Title must not be empty.</string>
    <string name="error_empty_username">Username must not be empty.</string>
</resources>
